--- a/Views/controllers/Create.cshtml
+++ b/Views/controllers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Crud_Colegio.Models.Entities.Usuario
+﻿@model Crud_Colegio.Models.Usuario
 
 @{
     ViewData["Title"] = "Create";
@@ -11,20 +11,36 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id_Doc" class="control-label"></label>
+                <select asp-for="Id_Doc" class="form-control" asp-items="ViewBag.Id_Doc"></select>
+                <span asp-validation-for="Id_Doc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Id_Rol" class="control-label"></label>
+                <select asp-for="Id_Rol" class="form-control" asp-items="ViewBag.Id_Rol"></select>
+                <span asp-validation-for="Id_Rol" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Nombre_User" class="control-label"></label>
                 <input asp-for="Nombre_User" class="form-control" />
                 <span asp-validation-for="Nombre_User" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Edad_User" class="control-label"></label>
+                <input asp-for="Edad_User" class="form-control" />
+                <span asp-validation-for="Edad_User" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NumDoc_User" class="control-label"></label>
+                <input asp-for="NumDoc_User" class="form-control" />
+                <span asp-validation-for="NumDoc_User" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Date_User" class="control-label"></label>
                 <input asp-for="Date_User" class="form-control" />
                 <span asp-validation-for="Date_User" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NumDoc_USer" class="control-label"></label>
-                <input asp-for="NumDoc_USer" class="form-control" />
-                <span asp-validation-for="NumDoc_USer" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email_User" class="control-label"></label>
@@ -37,22 +53,8 @@
                 <span asp-validation-for="NumTel_User" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Id_Doc" class="control-label"></label>
-                <select asp-for="Id_Doc" class="form-control" asp-items="ViewBag.Id_Doc"></select>
-                <span asp-validation-for="Id_Doc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_Rol" class="control-label"></label>
-                <select asp-for="Id_Rol" class="form-control" asp-items="ViewBag.Id_Rol"></select>
-                <span asp-validation-for="Id_Rol" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-area="" asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
