--- a/Views/controllers/Details.cshtml
+++ b/Views/controllers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Crud_Colegio.Models.Entities.Usuario
+﻿@model Crud_Colegio.Models.Usuario
 
 @{
     ViewData["Title"] = "Details";
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Date_User)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Edad_USer)
+            @Html.DisplayNameFor(model => model.NumDoc_User)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Edad_USer)
+            @Html.DisplayFor(model => model.NumDoc_User)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email_User)
@@ -40,9 +40,21 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NumTel_User)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Documentos.Nombre_Doc)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Documentos.Nombre_Doc)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Roles.Nombre_Rol)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Roles.Nombre_Rol)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id_User">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id_User" class="btn btn-primary">Edit</a> |
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
